--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Configure git
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config user.name "IGCrystal-Ghost"
+          git config user.email "cacheigcrystal@gmail.com"
 
       - name: Add upstream remote and fetch branches
         run: |
