--- a/.github/workflows/syn_upstream.yml
+++ b/.github/workflows/syn_upstream.yml
@@ -58,7 +58,7 @@ jobs:
 
           echo "Pushed ${BRANCH_NAME} to origin"
 
-      - name: Create PR via GitHub API if not exists
+      - name: Create PR via GitHub API if not exists (and clean up empty branch)
         id: create_pr
         env:
           GITHUB_API: https://api.github.com
@@ -70,14 +70,24 @@ jobs:
         run: |
           set -e
           git fetch --no-tags --prune origin "${BASE}" || true
+
           if ! git show-ref --verify --quiet "refs/remotes/origin/${BASE}"; then
             echo "警告：无法获取 origin/${BASE}，将继续尝试创建 PR（但这可能失败）"
           fi
 
           AHEAD_COUNT=$(git rev-list --count "origin/${BASE}..${BRANCH}" 2>/dev/null || echo "0")
           echo "ahead_count=${AHEAD_COUNT}"
+
           if [ "${AHEAD_COUNT}" -eq 0 ]; then
-            echo "No commits between ${BASE} and ${BRANCH} -> skip creating PR."
+            echo "No commits between ${BASE} and ${BRANCH} -> will delete the branch (no PR needed)."
+            echo "Attempting to delete remote branch origin/${BRANCH} ..."
+            git push origin --delete "${BRANCH}" || echo "远端删除失败或分支不存在，继续。"
+            git checkout --detach "origin/${BASE}" 2>/dev/null || \
+              git checkout --detach "${BASE}" 2>/dev/null || \
+              git checkout --orphan temp-cleanup || true
+            git branch -D "${BRANCH}" || echo "删除本地分支失败或分支不存在，继续。"
+
+            echo "Deleted branch ${BRANCH} (remote and local attempts made)."
             echo "pr_created=false" >> $GITHUB_OUTPUT
             exit 0
           fi
@@ -92,7 +102,6 @@ jobs:
             exit 0
           fi
 
-          # Create the PR
           TITLE="chore: 同步上游 ${UPSTREAM_REPO} 更新 (${BRANCH})"
           BODY="已自动同步上游仓库 \`${UPSTREAM_REPO}\` 的更新并新建了分支。<br><br> 请人工检查并合并。"
           CREATE_RESPONSE=$(curl -s -X POST -H "Authorization: token ${PAT}" \
