--- a/.github/workflows/dashboard_dist.yml
+++ b/.github/workflows/dashboard_dist.yml
@@ -42,27 +42,21 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Ensure pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
           version: '8'
           run_install: false
+          cache: 'pnpm'
+          cache-dependency-path: dashboard/pnpm-lock.yaml
 
       - name: Install dependencies and build
-        id: build_step
         working-directory: dashboard
         run: |
           set -eux
           pnpm --version
           pnpm install --frozen-lockfile
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
           pnpm run build
-
-      - name: Cache pnpm store
-        uses: actions/cache/save@v5
-        with:
-          path: ${{ steps.build_step.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Inject commit SHA, clean markdown and zip dist
         run: |
@@ -78,8 +72,12 @@ jobs:
           echo "COMMIT_SHA=${COMMIT_SHA}" >> $GITHUB_ENV
 
           mkdir -p "${TARGET_DIST}/assets"
-          echo "${COMMIT_SHA}" > "${TARGET_DIST}/assets/version"
-          echo "${LATEST_TAG}" >> "${TARGET_DIST}/assets/version"
+          version_value="${LATEST_TAG}"
+          if [ "${version_value}" = "unknown" ]; then
+            version_value="${COMMIT_SHA}"
+          fi
+          echo "${version_value}" > "${TARGET_DIST}/assets/version"
+          echo "${COMMIT_SHA}" > "${TARGET_DIST}/assets/version.sha"
 
           find "${TARGET_DIST}" -type f -name "*.md" -print -delete || true
 
