--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -2,6 +2,7 @@
   "name": "astrbot-dashboard",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "author": "CodedThemes",
   "scripts": {
     "dev": "vite --host",
@@ -25,13 +26,13 @@
     "highlight.js": "^11.11.1",
     "js-md5": "^0.8.3",
     "lodash": "4.17.21",
-    "marked": "^15.0.7",
     "markdown-it": "^14.1.0",
-    "pinyin-pro": "^3.26.0",
+    "marked": "^15.0.7",
     "pinia": "2.1.6",
+    "pinyin-pro": "^3.26.0",
     "remixicon": "3.5.0",
     "vee-validate": "4.11.3",
-    "vite-plugin-vuetify": "1.0.2",
+    "vite-plugin-vuetify": "2.1.2",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.5",
     "vue-router": "4.2.4",
@@ -46,7 +47,7 @@
     "@types/chance": "1.1.3",
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.5.7",
-    "@vitejs/plugin-vue": "4.3.3",
+    "@vitejs/plugin-vue": "6.0.3",
     "@vue/eslint-config-prettier": "10.2.0",
     "@vue/eslint-config-typescript": "14.6.0",
     "@vue/tsconfig": "0.4.0",
