feat: migrate components to TypeScript and enhance type safety
- Updated script tags in Vue components to use TypeScript (`lang="ts"`).
- Added type annotations for various variables and function parameters across multiple components.
- Introduced a new Pinia store for common state management and logging.
- Implemented a toast notification system with a dedicated store and utility functions.
- Enhanced utility functions for platform and provider management with type definitions.
- Improved sidebar customization logic with type safety and error handling.
- Updated TypeScript configuration to target ES2022 and disable JavaScript support.
- Refactored components to ensure compatibility with the new type definitions and stores.

--- a/dashboard/tsconfig.vite-config.json
+++ b/dashboard/tsconfig.vite-config.json
@@ -3,7 +3,8 @@
   "include": ["vite.config.*"],
   "compilerOptions": {
     "composite": true,
-    "allowJs": true,
+    "allowJs": false,
+    "target": "ES2022",
     "types": ["node"]
   }
 }
