--- a/.github/workflows/nightly_dashboard_dist.yml
+++ b/.github/workflows/nightly_dashboard_dist.yml
@@ -59,7 +59,7 @@ jobs:
 
           cat <<EOF > release_note.md
           ## **Frontend Artifacts Only**
-          
+
           > [!WARNING]
           >
           > This release is for override updates.   
@@ -67,13 +67,11 @@ jobs:
           >
           > 此版本适用于覆盖更新。  
           > 这是一个自动构建的 Nightly 版本，**会随代码提交随时更新**，可能包含不稳定的功能。
-
-          ### Build Info
           
           | Component | Ref |
           | :--- | :--- |
           | **AstrBot Core** | \`${LATEST_TAG}\` |
-          | **Dashboard** | \`${GITHUB_SHA:0:7}\` |
+          | **Commit** | \`${GITHUB_SHA:0:8}\` |
           | **Build Time** | $(date -u '+%Y-%m-%d %H:%M:%S UTC') |
           
           EOF
