--- a/.github/workflows/nightly_dashboard_dist.yml
+++ b/.github/workflows/nightly_dashboard_dist.yml
@@ -58,7 +58,7 @@ jobs:
           cd ..
 
           cat <<EOF > release_note.md
-          ## **Frontend Artifacts Only**
+          ### **Frontend Artifacts Only**
 
           > [!WARNING]
           >
