--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "astrbot-dashboard",
-  "version": "1.0.0",
+  "name": "nebula-dashboard",
+  "version": "2.0.0",
   "private": true,
   "type": "module",
   "author": "CodedThemes",
