Update plugin submission instructions in template

--- a/.github/ISSUE_TEMPLATE/PLUGIN_PUBLISH.yml
+++ b/.github/ISSUE_TEMPLATE/PLUGIN_PUBLISH.yml
@@ -7,14 +7,13 @@ body:
   - type: markdown
     attributes:
       value: |
-        # 此处不处理插件收录请求
+        # 🛑 此处不处理插件收录请求
 
         **这里不处理插件收录请求！**
         **This repository does not handle plugin submissions.**
 
         请前往 **AstrBot 官方仓库** 提交您的插件信息。
-        
-        Please submit your plugin to the official AstrBot repository:
+        Please submit your plugin to the official AstrBot repository.
 
         ---
 
@@ -22,3 +21,11 @@ body:
         ### ✨ 不过，这里提供一种便捷的方式 [提交插件](https://pa.i0c.cc/submit)
 
         *(请在那里选择对应的插件发布模板进行提交，或者选择便捷的方式提交插件)*
+
+  - type: checkboxes
+    id: confirmation
+    attributes:
+      label: 确认 (Confirmation)
+      options:
+        - label: 我已知晓此处不受理插件提交，我将前往上述链接进行操作。
+          required: true
