--- a/.github/ISSUE_TEMPLATE/PLUGIN_PUBLISH.yml
+++ b/.github/ISSUE_TEMPLATE/PLUGIN_PUBLISH.yml
@@ -1,4 +1,4 @@
-name: 发布插件 (请前往 AstrBot 仓库)
+name: 🙀 发布插件 (请前往 AstrBot 仓库)
 description: 此处不处理插件收录，请点击查看详情
 title: "[Invalid] 请前往 AstrBot 官方仓库提交插件"
 labels: ["invalid"]
@@ -7,16 +7,14 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 此处不处理插件收录请求
-
-        **这里不处理插件收录请求！**
-        **This repository does not handle plugin submissions.**
+        ### 1. 前往 AstrBot 官方仓库 [Issues](https://github.com/AstrBotDevs/AstrBot/issues)
+        ### 2. 或者使用便捷方式 [提交插件](https://pa.i0c.cc/submit)
+        
+        此处不处理插件收录请求。
+        This repository does not handle plugin submissions.
 
         请前往 **AstrBot 官方仓库** 提交您的插件信息。
         Please submit your plugin to the official AstrBot repository.
-
-        ### 1. 前往 AstrBot 官方仓库 [Issues](https://github.com/AstrBotDevs/AstrBot/issues)
-        ### 2. 或者使用便捷方式 [提交插件](https://pa.i0c.cc/submit)
 
         (请在那里选择对应的插件发布模板进行提交，或者选择便捷的方式提交插件)
 
