--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,13 +19,13 @@
     "axios": ">=1.6.2 <1.10.0 || >1.10.0 <2.0.0",
     "dompurify": "^3.3.1",
     "event-source-polyfill": "^1.0.31",
-    "github-markdown-css": "^5.8.1",
     "highlight.js": "^11.11.1",
     "js-md5": "^0.8.3",
     "katex": "^0.16.27",
     "lodash": "4.17.21",
     "markdown-it": "^14.1.0",
     "markstream-vue": "^0.0.6-beta.1",
+    "monaco-editor": "0.52.2",
     "mermaid": "^11.12.2",
     "pinia": "2.1.6",
     "pinyin-pro": "^3.26.0",
