--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,3 +110,6 @@ exclude = ["dashboard", "node_modules", "dist", "data", "tests"]
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["astrbot"]
